--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,7 +5,8 @@
   .intro {
 
     img {
-      border-radius: 5px;
+      border-radius: 5px 5px;
+      padding-top:105px;
 
         @media @phone {
           width: 100%;
