--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,9 @@
 
 nav {
   width: 100%;
-  background-color: @nav-bg;
+  background-color: rgba(246, 246, 246, 0.9);
+  z-index: 1;
+  position: fixed;
 
   .nav {
     width: 800px;
